chore: Testing with larger queries
